--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="jumbotron jumbotron-fluid text-center"
         style="margin-bottom:0; background-image: url('images/splash.jpg'); background-size:cover; background-position: bottom;">
         <div class="container">
-            <h1>DIY-signer</h1>
+            <h1>DIY-signer</h1><h2>A mobile UX Casestudy</h2>
         </div>
     </div>
 
@@ -47,20 +47,22 @@
         <div class="jumbotron text-center">
             <img src="images/DIYsigner.png" class="img-fluid" alt="Responsive image">
             <p>case study</p>
+            <h2>My role and team</h2> <p>I was a visual designer</p>
         </div>
 
     <!-- Research  -->
+    <h1>Research</h1>
     <div class="card" style="width: 18rem;">
-        <img src="images/process.png" class="card-img-top" alt="...">
+        <img src="images/process.png" class="card-img-top" alt="process">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Design principles</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li class="list-group-item">Ideation</li>
+            <li class="list-group-item">storyboarding</li>
+            <li class="list-group-item">wireframing</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Card link</a>
@@ -68,12 +70,14 @@
         </div>
     </div>
     <!-- Problem statement -->
-
+    <img src="images/problem.png" class="card-img-top" alt="process">
     <!-- Iteration -->
-
+    <img src="images/ideation.png" class="card-img-top" alt="process">
+    <img src="images/features.png" class="card-img-top" alt="process">
     <!-- Prototype -->
+    <h1>Final Prototype</h1>
+    <img src="images/final.png" class="card-img-top" alt="process">
 
-    
 </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
