--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="jumbotron jumbotron-fluid text-center"
         style="margin-bottom:0; background-image: url('images/splash.jpg'); background-size:cover; background-position: bottom;">
         <div class="container">
-            <h1>DIY-signer</h1><h2>A mobile UX Casestudy</h2>
+            <h1>DIY-signer</h1><h2>UX Casestudy</h2>
         </div>
     </div>
 
