--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+     >
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>DIY-signer</title>
 </head>
@@ -18,7 +18,7 @@
         style="margin-bottom:0; background-image: url('images/splash.jpg'); background-size:cover; background-position: bottom;">
         <div class="container">
             <h1>DIY-signer</h1>
-            <h2>UX Casestudy</h2>
+            <h2>UX Casestudy-2021</h2>
         </div>
     </div>
 
@@ -45,14 +45,35 @@
 
     <!-- introduction Jumbotron component-->
     <div class="container">
-        <div class="jumbotron text-center">
-            <img src="images/DIYsigner.png" class="img-fluid" alt="Responsive image">
-            <p>case study</p>
-            <h2>My role and team</h2>
-            <p>I was a visual designer</p>
+        <div class="jumbotron text-center m-4 p-4">
+            <img src="images/DIYsigner.png" class="img-fluid " alt="DIY-signer: create your space">
         </div>
+        <div class="row">
+            <div class="col-sm">
+                <h3>DIY-signer is an interior decoration app to help users design their rooms layout by
+                    visualizing new furniture and decor in their current space through augmented reality as well as
+                    purchasing the displayed products through an online marketplace.
 
-        <!-- Research  -->
+                    While we may no longer be in full lockdown, many of us are still working remotely and generally
+                    still spending a lot more time at home than we ever have historically. Being able to personalize,
+                    and update your space has always been important, but when you are spending the great majority of
+                    your time at home it becomes paramount.
+                </h3>
+            </div>
+            <div class="col-sm">
+                <h4>My Role</h4>
+                <h6> My major contribution was prototyping, designing, and wireframing the workspace and furnishing
+                    screens, however I was also involved in user interviews, UX research, competetor analsysis, user
+                    flow and user testing and analysis along side my teammates.
+                </h6>
+                <h4>Team</h4>
+                <h6>Alena Kessem, Project Manager<br>
+                    Jason Tran<br>
+                    Matthew Lane<br>
+                    Pablo Caballero</h6>
+
+            </div>
+        </div>
         <h1>Research</h1>
         <div class="card" style="width: 18rem;">
             <img src="images/process.png" class="card-img-top" alt="process">
@@ -79,23 +100,39 @@
         <img src="images/features.png" class="card-img-top" alt="process">
         <!-- Prototype -->
         <h1>Final Prototype</h1>
-<div class="jumbotron">
-    <img src="images/">
-</div>
+        <div class="jumbotron">
+            <img src="images/">
+        </div>
         <img src="images/final.png" class="card-img-top" alt="process">
 
     </div>
     <!-- Optional JavaScript -->
+    <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>;
+    <script src="js/index.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src=
+"https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity=
+"sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous">
+    </script>
+      
+    <!-- Popper -->
+    <script src=
+"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity=
+"sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous">
+    </script>
+      
+    <!-- Latest compiled and minified 
+        Bootstrap JavaScript -->
+    <script src=
+"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity=
+"sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
