--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-     >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>DIY-signer</title>
 </head>
@@ -24,20 +23,26 @@
 
     <!-- Nav component-->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="https://idgormley.github.io/UX_UI_HW_19/">Back</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Introduction</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Ideation</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Iteration</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Prototype</a>
                 </li>
             </ul>
         </div>
@@ -50,88 +55,110 @@
         </div>
         <div class="row">
             <div class="col-sm">
-                <h3>DIY-signer is an interior decoration app to help users design their rooms layout by
-                    visualizing new furniture and decor in their current space through augmented reality as well as
-                    purchasing the displayed products through an online marketplace.
-
-                    While we may no longer be in full lockdown, many of us are still working remotely and generally
-                    still spending a lot more time at home than we ever have historically. Being able to personalize,
-                    and update your space has always been important, but when you are spending the great majority of
-                    your time at home it becomes paramount.
+                <h3> While we may no longer be in full lockdown, many still work remotely or generally
+                    spend much more time at home than before. The space you live in has always been important, but when
+                    your home becomes your office as well as the place you spend the majority of your time it becomes
+                    paramount. But the ability to personalize and redcorate your home from home is limited.
                 </h3>
             </div>
             <div class="col-sm">
-                <h4>My Role</h4>
-                <h6> My major contribution was prototyping, designing, and wireframing the workspace and furnishing
-                    screens, however I was also involved in user interviews, UX research, competetor analsysis, user
-                    flow and user testing and analysis along side my teammates.
-                </h6>
-                <h4>Team</h4>
-                <h6>Alena Kessem, Project Manager<br>
+                <h4 class="text-muted">My Role</h4>
+                <h5> Visual designer-user research, UX design, prototyping testing</h5>
+                <h4 class="text-muted">Team</h4>
+                <h5>Alena Kessem, Project Manager<br>
                     Jason Tran<br>
                     Matthew Lane<br>
-                    Pablo Caballero</h6>
+                    Pablo Caballero</h5>
+            </div>
+        </div>
 
-            </div>
-        </div>
+        <img src="images/process.png" alt="process">
+
         <h1>Research</h1>
-        <div class="card" style="width: 18rem;">
-            <img src="images/process.png" class="card-img-top" alt="process">
-            <div class="card-body">
-                <h5 class="card-title">Design principles</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Ideation</li>
-                <li class="list-group-item">storyboarding</li>
-                <li class="list-group-item">wireframing</li>
-            </ul>
-            <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg"> <img src="images/research.png" class="img-fluid " alt="User research"></div>
+                <div class="col-lg">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="lead">The main question we tried to answer was “what steps do users take when
+                                decorating/redecorating a space and how do they feel about the process?” After
+                                conducting 5
+                                interviews we noticed a similar pattern: all Users pointed out common blockers such as
+                                lack
+                                of time
+                                and lack of inspiration. At the same time, it was obvious that working from home
+                                inclines
+                                people to
+                                redecorate for one reason or another. We also uncovered that people rarely use digital
+                                tools, for
+                                example no one mentioned any of the competing interior design apps, however three out of
+                                five people
+                                directly mentioned that they would love to have a better way of visualizing things
+                                within
+                                the space.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="images/research.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="images/persona.png" alt="persona">
+        <img src="images/problem.png" alt="problem definition">
+
         <!-- Problem statement -->
-        <img src="images/problem.png" class="card-img-top" alt="process">
+        <img src="images/problem.png" alt="problem definition">
         <!-- Iteration -->
-        <img src="images/ideation.png" class="card-img-top" alt="process">
-        <img src="images/features.png" class="card-img-top" alt="process">
+        <img src="images/ideation.png" alt="ideation">
+        <img src="images/features.png" alt="features">
+        <img src="images/storyboard.png" alt="features">
+        <img src="images/userFlow.png" alt="user flow">
+        <img src="images/iteration.png" alt="iteration">
+
+        <img src="images/testing1.png" alt="features">
+        <img src="images/testing2.png" alt="features">
+
         <!-- Prototype -->
         <h1>Final Prototype</h1>
         <div class="jumbotron">
             <img src="images/">
         </div>
-        <img src="images/final.png" class="card-img-top" alt="process">
+        <img src="images/final.png" alt="process">
 
     </div>
     <!-- Optional JavaScript -->
     <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>;
     <script src="js/index.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src=
-"https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity=
-"sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous">
-    </script>
-      
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+        </script>
+
     <!-- Popper -->
-    <script src=
-"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity=
-"sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous">
-    </script>
-      
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+        </script>
+
     <!-- Latest compiled and minified 
         Bootstrap JavaScript -->
-    <script src=
-"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity=
-"sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
         </script>
 </body>
 
