--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <img src="images/" class="card-img-top">
                     <div class="card-body">
                         <a href="#" class="card-link">Figma </a>
-                        <a href="#" class="card-link">Another link</a>
+                        <a href="#" class="card-link">GitHub Repository</a>
                     </div>
                   </div>
             </div>
@@ -269,7 +269,7 @@
 
         </div>
         <!-- Optional JavaScript -->
-        <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>;
+        <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
         <script src="js/index.js"></script>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
