--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                     spend much more time at home than before. The space you live in has always been important, but when
                     your home becomes your office as well as the place you spend the majority of your time it becomes
                     paramount. But the ability to personalize and redecorate from home is limited.<br>
-                     In just three weeks we developed a mobile app solution to this problem. 
+                    In just three weeks we developed a mobile app solution to this problem.
                 </h5>
             </div>
-            <div class="col-sm m-4 p-4">
+            <div class="col-sm mx-4 px-4">
                 <h5 class="text-muted">My Role</h5>
                 <h6> Visual designer-user research, UX design, prototyping testing</h6>
                 <h5 class="text-muted">Team</h5>
@@ -73,13 +73,14 @@
             </div>
         </div>
         <div class="container">
-            <img src="images/process.png" class="card-img mb-4" alt="Our process">
+            <img src="images/process.png" class="card-img my-4" alt="Our process">
             <h1 id="research">Research</h1>
             <div class="card my-4">
                 <img src="images/research.png" class="card-img-top " alt="User research">
                 <div class="card-body">
                     <p class="card-text lead">The main question we tried to answer was: <br>
-                        “What steps do users take when decorating/redecorating a space and how do they feel about the process?” <br>
+                        “What steps do users take when decorating/redecorating a space and how do they feel about the
+                        process?” <br>
                         After conducting 5 interviews we noticed a similar pattern: all users pointed out common
                         blockers such as lack of time and lack of inspiration. At the same time, it was obvious that
                         working from home inclines people to redecorate for one reason or another. We also uncovered
@@ -91,9 +92,11 @@
             <div class="card my-4">
                 <img src="images/persona.png" alt="persona" class="card-img-top ">
                 <div class="card-body">
-                    <p class="card-text lead">With user interviews completed, we went on to create the User Persona of Gene Willis, age 32, who works as
+                    <p class="card-text lead">With user interviews completed, we went on to create the User Persona of
+                        Gene Willis, age 32, who works as
                         a Copy Editor. <br> Gene has an odd-shaped apartment which creates a lot of space constraints so
-                        it is necessary to be very cautious about the size and shape of the furniture. Their work keeps them busy; its hard to find time for decorating even though they are tired of
+                        it is necessary to be very cautious about the size and shape of the furniture. Their work keeps
+                        them busy; its hard to find time for decorating even though they are tired of
                         looking at the same walls every day.<br>
                         Building up Gene’s personality based on the real users’ feedback helped us better understand who
                         we are designing for: <br>a busy professional who probably spends more time at home recently and
@@ -237,15 +240,17 @@
                 </div>
             </div>
             <!-- Prototype -->
-            <h1 id="prototype">Prototype</h1>
+
             <div class="jumbotron">
                 <div class="card">
-                    <img src="images/" class="card-img-top">
                     <div class="card-body">
-                        <a href="#" class="card-link">Figma </a>
-                        <a href="#" class="card-link">GitHub Repository</a>
+                        <h1 class="card-title" id="prototype">Prototype</h1>
+                        <img src="images/diy.gif" class="card-img-top">
+
+                        <a href="https://www.figma.com/proto/Z1lYqsjSYJe1Jy5YUjPdTN/DIYsigner-Mid-Fi?node-id=12%3A555&starting-point-node-id=12%3A553"
+                            class="card-link">Figma Prototype</a>
                     </div>
-                  </div>
+                </div>
             </div>
 
             <div class="card my-4">
@@ -265,9 +270,10 @@
 
                 </div>
             </div>
-
-
         </div>
+        <nav class="navbar fixed-bottom navbar-light">
+            <a class="navbar-brand" href="#" alt="Return to top">^</a>
+          </nav>
         <!-- Optional JavaScript -->
         <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
         <script src="js/index.js"></script>
