--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="images/DIYsigner.png" class="img-fluid" alt="DIY-signer: create your space" id="intro">
         </div>
         <div class="row">
-            <div class="col-sm m-4 px-4">
+            <div class="col-sm mx-4 px-4">
                 <h5> While we may no longer be in full lockdown, many still work remotely or generally
                     spend much more time at home than before. The space you live in has always been important, but when
                     your home becomes your office as well as the place you spend the majority of your time it becomes
@@ -62,7 +62,7 @@
                     In just three weeks we developed a mobile app solution to this problem.
                 </h5>
             </div>
-            <div class="col-sm mx-4 px-4">
+            <div class="col-sm mx-4 px-4  align-self-center">
                 <h5 class="text-muted">My Role</h5>
                 <h6> Visual designer-user research, UX design, prototyping testing</h6>
                 <h5 class="text-muted">Team</h5>
@@ -272,7 +272,7 @@
             </div>
         </div>
         <nav class="navbar fixed-bottom navbar-light">
-            <a class="navbar-brand" href="#" alt="Return to top">^</a>
+            <a class="navbar-brand" href="#" id="footer" alt="Return to top">^</a>
           </nav>
         <!-- Optional JavaScript -->
         <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
